--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.4.2",
     "react-paginate": "^5.2.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
     "react-scripts": "^1.1.4"
